--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,8 +1,8 @@
-extends ../layout/main
+//- extends ../layout/template
+//- index-9
+extends ../layout/ui-kit-form-elements
+
 
 //- block content
-//-   .zalupa pupa
-//-   .pupa zalupa
-//- 
-//- block second
-//-   .second second
+  //- .main-4
+  //-   +signIn('Войти')
